--- a/css/nemo.css
+++ b/css/nemo.css
@@ -18,7 +18,9 @@ body {
     font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
 
-body, header, footer, main, dialog, h1, h2, h3, h4, h5, h6, p, ol, ul, li, button, input, select, textarea {
+body, header, footer, main, dialog, section,
+h1, h2, h3, h4, h5, h6, p, ol, ul, li,
+button, input, select, textarea {
     margin: 0;
     padding: 0;
     border: none;
@@ -44,12 +46,10 @@ a:link, a:hover, a:active, a:visited {
 
 .pull-left {
     float: left;
-    margin-right: 14px;
 }
 
 .pull-right {
     float: right;
-    margin-left: 14px;
 }
 
 /* Header部分CSS */
@@ -66,16 +66,121 @@ a:link, a:hover, a:active, a:visited {
     width: 100%;
     height: 64px;
     background-color: #fff;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .header .container {
     height: 64px;
 }
 
-.logo {
+.app-name {
     height: 64px;
     line-height: 64px;
+    font-size: 2em;
+    font-weight: 700;
+}
+
+.header-action {
+    margin: 14px 0;
+}
+
+.header-line {
+    display: block;
+    height: 24px;
+    margin: 20px 24px;
+}
+
+.header-line:after {
+    top: 1px;
+    content: "|";
+    color: #dcdfe6;
+}
+
+.account {
+    position: relative;
+    cursor: pointer;
+}
+
+.app-code {
+    position: absolute;
+    top: 64px;
+    right: 0;
+    width: 172px;
+    height: 202px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15), 0 0 4px rgba(0, 0, 0, 0.15);
+}
+
+.app-code-img {
+    display: block;
+    width: 140px;
+    height: 140px;
+    margin: 16px 16px 12px 16px;
+}
+
+.app-code-note {
+    color: #303133;
+    font-size: 14px;
+    text-align: center;
+}
+
+.account-info {
+    height: 64px;
+    line-height: 64px;
+}
+
+.account-info .icon-phone {
+    font-size: 18px;
+}
+
+.account-info .icon-menu-down {
+    font-size: 12px;
+}
+
+.account-avatar {
+    display: block;
+    float: left;
+    width: 40px;
+    height: 40px;
+    border: 1px solid #dcdfe6;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 11px 0;
+}
+
+.account-name {
+    margin: 0 4px 0 8px;
+}
+
+.account-nav {
+    position: absolute;
+    top: 64px;
+    right: 0;
+    width: 140px;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15), 0 0 4px rgba(0, 0, 0, 0.15);
+}
+
+.account-nav .icon {
+    left: -2px;
+    margin-right: 10px;
+}
+
+.account-item {
+    display: block;
+    width: 140px;
+    height: 42px;
+    line-height: 42px;
+    color: #000;
+}
+
+.account-item:hover {
+    background-color: #f4f4f4;
+}
+
+.account-logout {
+    border-top: 1px solid #dcdfe6;
 }
 
 /* Main部分CSS */
@@ -97,6 +202,11 @@ a:link, a:hover, a:active, a:visited {
 .btn .icon {
     top: 2px;
     margin-right: 4px;
+}
+
+.btn-sm {
+    width: 64px;
+    height: 36px;
 }
 
 .btn-default {
@@ -263,13 +373,12 @@ textarea.form-control {
     border-top: 1px solid #dcdfe6;
 }
 
-.modal-footer > .btn {
-    width: 64px;
-    height: 36px;
-}
-
 .modal-footer > .btn-primary:disabled {
     width: 96px;
+}
+
+.modal-footer > .pull-right {
+    margin-left: 14px;
 }
 
 /* Rotate部分CSS */
@@ -328,8 +437,9 @@ textarea.form-control {
 }
 
 .icon {
-    position: relative;
     display: inline-block;
+    position: relative;
+    top: 2px;
     font-family: 'Glyphicons Halflings', serif;
     font-style: normal;
     font-weight: normal;
@@ -339,10 +449,26 @@ textarea.form-control {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-user:before {
+    content: "\e008";
+}
+
 .icon-remove:before {
     content: "\e014";
 }
 
+.icon-off:before {
+    content: "\e017";
+}
+
 .icon-cog:before {
     content: "\e019";
+}
+
+.icon-phone:before {
+    content: "\e145";
+}
+
+.icon-menu-down:before {
+    content: "\e259";
 }
