--- a/css/nemo.css
+++ b/css/nemo.css
@@ -5,7 +5,7 @@ html {
     max-width: 100%;
     min-width: 1200px;
     height: 100%;
-    background: #f1f2f3;
+    background-color: #f1f2f3;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    color: #000;
+    color: #303133;
     font-size: 15px;
     font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
 }
@@ -66,7 +66,7 @@ a:link, a:hover, a:active, a:visited {
     width: 100%;
     height: 64px;
     background-color: #fff;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.12);
 }
 
 .header .container {
@@ -92,7 +92,7 @@ button.login-action {
     width: 1px;
     height: 20px;
     margin: 22px 28px;
-    background-color: #dcdfe6;
+    background-color: #ced4da;
 }
 
 .account {
@@ -145,7 +145,7 @@ button.login-action {
     width: 40px;
     height: 40px;
     margin: 11px 0;
-    border: 1px solid #dcdfe6;
+    border: 1px solid #ced4da;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -174,7 +174,7 @@ button.login-action {
     width: 140px;
     height: 42px;
     line-height: 42px;
-    color: #000;
+    color: #303133;
 }
 
 .account-item:hover {
@@ -182,7 +182,7 @@ button.login-action {
 }
 
 .account-logout {
-    border-top: 1px solid #dcdfe6;
+    border-top: 1px solid #ced4da;
 }
 
 .query-group {
@@ -225,7 +225,7 @@ button.login-action {
     line-height: 64px;
     font-size: 16px;
     text-align: center;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #ced4da;
     background-color: #e1e2e3;
 }
 
@@ -265,7 +265,7 @@ main.container {
 }
 
 .btn-default {
-    color: #000;
+    color: #303133;
     border: 1px solid #ced4da;
     background-color: #fff;
 }
@@ -287,20 +287,20 @@ main.container {
 
 .btn-primary {
     color: #fff;
-    background-color: #000;
-}
-
-.btn-primary:hover {
     background-color: #303133;
 }
 
-.btn-primary:active {
+.btn-primary:hover {
     background-color: #606266;
+}
+
+.btn-primary:active {
+    background-color: #909399;
 }
 
 .btn-primary:disabled {
     cursor: not-allowed;
-    background-color: #909399;
+    background-color: #c0c4cc;
 }
 
 .btn-link {
@@ -321,7 +321,7 @@ main.container {
 .form-control {
     height: 42px;
     line-height: 42px;
-    color: #444;
+    color: #303133;
     font-size: 15px;
     padding: 0 12px;
     border: 1px solid #ced4da;
@@ -329,7 +329,7 @@ main.container {
 }
 
 .form-control:focus {
-    border-color: #000;
+    border-color: #303133;
 }
 
 select.form-control {
@@ -395,7 +395,7 @@ textarea.form-control {
 
 .modal-header {
     padding: 16px;
-    border-bottom: 1px solid #dcdfe6;
+    border-bottom: 1px solid #ced4da;
 }
 
 .modal-title {
@@ -421,7 +421,7 @@ textarea.form-control {
 .modal-footer {
     overflow: hidden;
     padding: 16px;
-    border-top: 1px solid #dcdfe6;
+    border-top: 1px solid #ced4da;
 }
 
 .modal-footer > .btn-primary:disabled {
