--- a/css/user-settings.css
+++ b/css/user-settings.css
@@ -89,3 +89,29 @@ p.form-label {
 .form-label-4 .btn {
     margin-left: 292px;
 }
+
+.radio {
+    border: none;
+}
+
+.form-radio {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    padding: 3px;
+    margin-top: 4px;
+    border: 1px solid #ced4da;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: #dcdfe6;
+    background-clip: content-box;
+}
+
+input[type="radio"] {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+}
+
+input[type="radio"]:checked + .form-radio {
+    background-color: #000;
+}
