--- a/css/user-index.css
+++ b/css/user-index.css
@@ -38,6 +38,7 @@
     border: 4px solid #fff;
     border-radius: 136px;
     object-fit: cover;
+    background-color: #f4f4f4;
 }
 
 .user-name {
@@ -157,6 +158,7 @@
     display: block;
     width: 118px;
     height: 88px;
+    padding: 0;
     object-fit: cover;
     border: 1px solid #ced4da;
 }
