--- a/css/nemo.css
+++ b/css/nemo.css
@@ -267,11 +267,6 @@ main.container {
     height: 36px;
 }
 
-.btn-block {
-    width: 100%;
-    height: 45px;
-}
-
 .btn-default {
     color: #000;
     border: 1px solid #ced4da;
@@ -332,7 +327,7 @@ main.container {
     color: #000;
     font-size: 15px;
     padding: 0 12px;
-    border: 1px solid #ced4da;
+    border: 1px solid #bbb;
     box-sizing: border-box;
 }
 
@@ -516,6 +511,10 @@ textarea.form-control {
     content: "\e008";
 }
 
+.icon-th:before {
+    content: "\e011";
+}
+
 .icon-remove:before {
     content: "\e014";
 }
@@ -534,6 +533,18 @@ textarea.form-control {
 
 .icon-plus:before {
     content: "\002b";
+}
+
+.icon-lock:before {
+    content: "\e033";
+}
+
+.icon-remove-sign:before {
+    content: "\e083";
+}
+
+.icon-eye-open:before {
+    content: "\e105";
 }
 
 .icon-link:before {
