--- a/css/login.css
+++ b/css/login.css
@@ -29,6 +29,7 @@
 
 .app-url {
     margin-top: 4px;
+    color: #606266;
     font-size: 14px;
 }
 
@@ -112,56 +113,28 @@
 .btn-block {
     width: 100%;
     height: 54px;
-    font-size: 18px;
-    margin: 8px 0;
-    border-radius: 0;
+    font-size: 17px;
+    margin: 4px 0;
 }
 
-.link {
+.checkbox-group {
     height: 36px;
-    line-height: 38px;
-    padding: 0 16px;
-    color: #000;
-    text-align: center;
-    border: 1px solid #303133;
-}
-
-.link:hover, .link:active {
-    color: #fff;
-    background-color: #303133;
-}
-
-.link:active {
-    color: #fff;
-    background-color: #606266;
-    border-color: #606266;
-}
-
-.checkbox-inline {
-    position: relative;
-    display: inline-block;
-    height: 38px;
-    line-height: 38px;
+    line-height: 36px;
 }
 
 .checkbox {
     float: left;
-    width: 17px;
-    height: 17px;
-    padding: 3px;
-    margin: 10px 6px 0 0;
-    border: 1px solid #bbb;
-    box-sizing: border-box;
-    background-color: #dcdfe6;
-    background-clip: content-box;
+    margin: 10px 6px 10px 0;
 }
 
-input[type="checkbox"] {
-    /*position: absolute;*/
-    /*clip: rect(0, 0, 0, 0);*/
-    display: none;
+.checkbox-note {
+    color: #909399;
 }
 
-input[type="checkbox"]:checked + .checkbox {
-    background-color: #000;
+.link {
+    color: #303133;
+}
+
+.link:hover, .link:active {
+    text-decoration-line: underline;
 }
