--- a/css/nemo.css
+++ b/css/nemo.css
@@ -254,17 +254,11 @@ main.container {
     height: 42px;
     font-size: 15px;
     cursor: pointer;
-    border-radius: 2px;
 }
 
 .btn .icon {
     top: 2px;
     margin-right: 4px;
-}
-
-.btn-sm {
-    width: 64px;
-    height: 36px;
 }
 
 .btn-default {
@@ -306,13 +300,34 @@ main.container {
     background-color: #909399;
 }
 
-.btn-link {
+.btn-brief {
+    background-color: transparent;
+}
+
+.btn-petite {
+    width: 64px;
+    height: 36px;
+}
+
+.btn-flexible {
+    width: auto;
+    height: 36px;
+    padding: 0 16px;
+    border: 1px solid #000;
+    background-color: transparent;
+}
+
+.btn-elegance {
+    width: 96px;
+    height: 36px;
+    font-size: 14px;
+    border: 1px solid #000;
     background-color: transparent;
 }
 
 /* Form部分CSS */
 .form-group {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
 }
 
 .form-label {
@@ -327,7 +342,7 @@ main.container {
     color: #000;
     font-size: 15px;
     padding: 0 12px;
-    border: 1px solid #bbb;
+    border: 1px solid #ced4da;
     box-sizing: border-box;
 }
 
@@ -376,6 +391,45 @@ textarea.form-control {
 
 .form-horizontal .form-label, .form-horizontal .form-control {
     float: left;
+}
+
+.radio {
+    display: block;
+    width: 16px;
+    height: 16px;
+    padding: 3px;
+    border: 1px solid #ced4da;
+    border-radius: 50%;
+    box-sizing: border-box;
+    background-color: #ced4da;
+    background-clip: content-box;
+}
+
+input[type="radio"] {
+    display: none;
+}
+
+input[type="radio"]:checked + .radio {
+    background-color: #000;
+}
+
+.checkbox {
+    display: block;
+    width: 16px;
+    height: 16px;
+    padding: 3px;
+    border: 1px solid #ced4da;
+    box-sizing: border-box;
+    background-color: #ced4da;
+    background-clip: content-box;
+}
+
+input[type="checkbox"] {
+    display: none;
+}
+
+input[type="checkbox"]:checked + .checkbox {
+    background-color: #000;
 }
 
 /* Modal部分CSS */
