--- a/css/user-settings.css
+++ b/css/user-settings.css
@@ -8,25 +8,13 @@
     margin-bottom: 40px;
 }
 
-.user-info .btn {
-    margin-top: 46px;
-    margin-left: 16px;
-}
-
-.btn-choose {
-    width: 96px;
-    height: 36px;
-    font-size: 14px;
-    border: 1px solid #000;
-    background-color: transparent;
-}
-
 .user-avatar {
     display: block;
     width: 120px;
     height: 120px;
     object-fit: cover;
-    border: 4px solid #ced4da;
+    border: 2px solid #ced4da;
+    border-radius: 50%;
 }
 
 .user-option {
@@ -70,8 +58,8 @@ p.form-label {
 }
 
 .form-label-2 select.form-control {
-    width: 158px;
-    margin-right: 12px;
+    width: 160px;
+    margin-right: 8px;
 }
 
 .form-label-2 .btn {
@@ -96,35 +84,11 @@ p.form-label {
     border: none;
 }
 
-.radio-inline {
-    position: relative;
-    display: inline-block;
+.radio-control .pull-left {
+    margin-right: 16px;
 }
 
 .radio {
-    display: inline-block;
     float: left;
-    width: 18px;
-    height: 18px;
-    margin: 11px 6px 13px 0;
-    padding: 4px;
-    border: 1px solid #ced4da;
-    border-radius: 50%;
-    box-sizing: border-box;
-    background-color: #dcdfe6;
-    background-clip: content-box;
-}
-
-.radio-note {
-    float: left;
-    margin-right: 14px;
-}
-
-input[type="radio"] {
-    position: absolute;
-    clip: rect(0, 0, 0, 0);
-}
-
-input[type="radio"]:checked + .radio {
-    background-color: #000;
+    margin: 12px 6px 12px 0;
 }
