2019/03/01 完善用户漫画册界面

--- a/css/user-book.css
+++ b/css/user-book.css
@@ -2,24 +2,26 @@
     position: relative;
     width: 1200px;
     height: 480px;
+    background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
 .book-cover {
     display: block;
     width: 1200px;
-    height: 480px;
+    height: 420px;
     object-fit: cover;
 }
 
 .book-info {
+    display: -webkit-flex;
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
     align-content: center;
     position: absolute;
     top: 0;
     width: 720px;
-    height: 480px;
+    height: 420px;
     padding: 0 240px;
     color: #fff;
     text-align: center;
@@ -27,17 +29,58 @@
 }
 
 .book-name {
+    width: 100%;
+    height: 42px;
     font-size: 32px;
     font-weight: 700;
 }
 
 .book-description {
+    width: 100%;
     font-size: 15px;
     line-height: 22px;
     height: 120px;
     margin-top: 16px;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 5;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+}
+
+.book-appreciate {
+    width: 1200px;
+    height: 60px;
+}
+
+.list-way {
+    float: left;
+    width: 20px;
+    height: 20px;
+    background: url(../images/icon/list0.png);
+    background-size: cover;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 24px;
+    cursor: pointer;
+}
+
+.list-active {
+    background: url(../images/icon/list1.png);
+    background-size: cover;
+}
+
+.trans-way {
+    float: left;
+    width: 20px;
+    height: 20px;
+    background: url(../images/icon/trans0.png);
+    background-size: cover;
+    margin-top: 20px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.trans-active {
+    background: url(../images/icon/trans1.png);
+    background-size: cover;
 }
