--- a/css/user-book.css
+++ b/css/user-book.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 1200px;
     height: 480px;
+    margin-bottom: 40px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 6px rgba(0, 0, 0, 0.1);
 }
@@ -21,30 +22,43 @@
     position: absolute;
     top: 0;
     width: 720px;
-    height: 420px;
+    height: 360px;
     padding: 0 240px;
     color: #fff;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .book-name {
     width: 100%;
-    height: 42px;
-    font-size: 32px;
-    font-weight: 700;
+    height: 40px;
+    font-size: 28px;
 }
 
 .book-description {
     width: 100%;
-    font-size: 15px;
     line-height: 22px;
-    height: 120px;
+    min-height: 22px;
+    max-height: 66px;
     margin-top: 16px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
+}
+
+.user-info {
+    position: absolute;
+    top: 360px;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.user-avatar {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
 }
 
 .book-appreciate {
@@ -56,7 +70,7 @@
     float: left;
     width: 20px;
     height: 20px;
-    background: url(../images/icon/list0.png);
+    background: url(../images/icon/list-silver.png);
     background-size: cover;
     margin-top: 20px;
     margin-right: 20px;
@@ -65,22 +79,148 @@
 }
 
 .list-active {
-    background: url(../images/icon/list1.png);
+    background: url(../images/icon/list-black.png);
     background-size: cover;
 }
 
-.trans-way {
+.slide-way {
     float: left;
     width: 20px;
     height: 20px;
-    background: url(../images/icon/trans0.png);
+    background: url(../images/icon/slide-silver.png);
     background-size: cover;
     margin-top: 20px;
     margin-right: 20px;
     cursor: pointer;
 }
 
-.trans-active {
-    background: url(../images/icon/trans1.png);
+.slide-active {
+    background: url(../images/icon/slide-black.png);
     background-size: cover;
+}
+
+.slide {
+    display: -webkit-flex;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+
+.slide-img {
+    display: block;
+    width: 1080px;
+    height: 840px;
+    margin: auto;
+    object-fit: contain;
+}
+
+.slide-dismiss {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 64px;
+    height: 64px;
+    cursor: pointer;
+}
+
+.slide-dismiss:hover, .slide-dismiss:active {
+    background: #000;
+}
+
+.slide-dismiss img {
+    display: block;
+    width: 64px;
+    height: 64px;
+    background: url("../images/icon/close.png") no-repeat center;
+}
+
+.slide-nav {
+    position: absolute;
+    width: 180px;
+    height: 120px;
+    cursor: pointer;
+}
+
+.slide-nav:hover, .slide-nav:active {
+    background-color: #000;
+}
+
+.slide-arrow {
+    position: absolute;
+    display: block;
+    width: 60px;
+    height: 120px;
+    top: -4px;
+}
+
+.slide-preview {
+    position: absolute;
+    display: none;
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    top: 20px;
+}
+
+.slide-nav:hover .slide-preview {
+    display: block;
+}
+
+.pre {
+    left: 0;
+}
+
+.next {
+    right: 0;
+}
+
+.pre .slide-arrow {
+    left: 5px;
+    background: url("../images/icon/return.png") no-repeat center;
+}
+
+.next .slide-arrow {
+    right: 5px;
+    background: url("../images/icon/enter.png") no-repeat center;
+}
+
+.pre .slide-preview {
+    right: 20px;
+}
+
+.next .slide-preview {
+    left: 20px;
+}
+
+.img-content {
+    position: relative;
+    padding: 25px;
+}
+
+.modal-img {
+    display: block;
+    width: 400px;
+    height: auto;
+}
+
+.btn-replace {
+    position: absolute;
+    right: 42px;
+    bottom: 42px;
+    width: 38px;
+    height: 38px;
+    line-height: 38px;
+    color: #909399;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid #ced4da;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.delete-content {
+    font-size: 17px;
 }
