--- a/view/flex.html
+++ b/view/flex.html
@@ -14,16 +14,18 @@
         .container {
             display: flex;
             flex-wrap: wrap;
+            justify-content: center;
             align-content: center;
             width: 1200px;
             height: 800px;
             margin: auto;
             background-color: #fff;
+            align-items: center;
         }
 
         .item {
             flex-grow: 10;
-            width: 100%;
+            width: 100px;
             height: 200px;
             border: 1px solid #ced4da;
             margin: 4px;
