--- a/css/nemo.css
+++ b/css/nemo.css
@@ -144,7 +144,7 @@ button.login-action {
     float: left;
     width: 40px;
     height: 40px;
-    margin: 11px 0;
+    margin: 11px 4px 11px 0;
     border: 1px solid #ced4da;
     border-radius: 50%;
     object-fit: cover;
@@ -243,7 +243,8 @@ main.container {
 }
 
 .content {
-    width: 1220px;
+    display: flex;
+    width: 1200px;
     min-height: 315px;
     margin-bottom: 60px;
 }
