--- a/css/author-index.css
+++ b/css/author-index.css
@@ -34,7 +34,7 @@ main.container {
     width: 100%;
     height: 580px;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.35);
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .author-avatar {
@@ -64,6 +64,7 @@ main.container {
     line-height: 22px;
     margin: 24px 0;
     color: #ced4da;
+    font-size: 14px;
     text-align: center;
 }
 
