--- a/css/user-index.css
+++ b/css/user-index.css
@@ -22,15 +22,15 @@
 .user-info {
     display: -webkit-flex;
     display: flex;
-    flex-wrap: wrap;
-    align-content: center;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
-    width: 720px;
-    height: 300px;
-    padding: 75px 250px;
+    width: 1200px;
+    height: 450px;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.25);
 }
 
 .user-avatar {
@@ -45,19 +45,21 @@
 
 .user-name {
     color: #fff;
+    width: 720px;
     font-size: 24px;
     font-weight: 700;
     line-height: 32px;
-    margin-bottom: 8px;
 }
 
 .user-location {
     color: #fff;
-    margin-bottom: 8px;
+    width: 720px;
+    margin: 8px 0;
 }
 
 .user-biography {
     display: -webkit-box;
+    width: 720px;
     height: 60px;
     line-height: 20px;
     color: #fff;
